initial setup complete. Next step to test CRUD

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:t@lkingduck@localhost/driver_license_db
+DATABASE_URL=postgresql://postgres:password@localhost/driver_license_db
